// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterDate component should render with init data correctly 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
      "paddingBottom": 24,
    }
  }
  testID="filter_date_modal"
>
  <Text
    style={
      Array [
        Object {
          "color": "#181C32",
          "fontFamily": "BeVietnamPro-SemiBold",
          "fontSize": 17,
        },
        Object {},
        Object {
          "marginBottom": 24,
          "marginHorizontal": 16,
          "marginTop": 4,
        },
      ]
    }
  >
    Day posted
  </Text>
  <View
    accessibilityState={
      Object {
        "disabled": false,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="btn_option_select_date_TODAY"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 24,
          "paddingHorizontal": 16,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#212745",
              "fontFamily": "BeVietnamPro-Light",
              "fontSize": 14,
            },
            Object {
              "color": "#353E6E",
            },
            undefined,
          ]
        }
      >
        Today
      </Text>
    </View>
  </View>
  <View
    accessibilityState={
      Object {
        "disabled": false,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="btn_option_select_date_YESTERDAY"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 24,
          "paddingHorizontal": 16,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#212745",
              "fontFamily": "BeVietnamPro-Light",
              "fontSize": 14,
            },
            Object {
              "color": "#353E6E",
            },
            undefined,
          ]
        }
      >
        Yesterday
      </Text>
    </View>
  </View>
  <View
    accessibilityState={
      Object {
        "disabled": false,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="btn_option_select_date_LAST_SEVEN_DAYS"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 24,
          "paddingHorizontal": 16,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#212745",
              "fontFamily": "BeVietnamPro-Light",
              "fontSize": 14,
            },
            Object {
              "color": "#353E6E",
            },
            undefined,
          ]
        }
      >
        Last 7 days
      </Text>
    </View>
  </View>
  <View
    accessibilityState={
      Object {
        "disabled": true,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="btn_option_select_date_FROM_TO"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 24,
          "paddingHorizontal": 16,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#212745",
              "fontFamily": "BeVietnamPro-Light",
              "fontSize": 14,
            },
            Object {
              "color": "#353E6E",
            },
            undefined,
          ]
        }
      >
        Specific day
      </Text>
      <View>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "alignSelf": "baseline",
              "backgroundColor": "#EBF4FF",
              "borderRadius": 100,
              "flexDirection": "row",
              "height": 24,
              "justifyContent": "center",
              "marginRight": 8,
              "opacity": 1,
              "paddingLeft": 4,
              "paddingRight": 8,
            }
          }
          testID="tag.item"
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#212745",
                  "fontFamily": "BeVietnamPro-Light",
                  "fontSize": 11,
                },
                Object {},
                Object {
                  "color": "#007AFF",
                  "paddingLeft": 4,
                },
              ]
            }
            testID="tag.label"
          >
            Feb 11, 2023 - Feb 13, 2023
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`FilterDate component should render without init data correctly 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
      "paddingBottom": 24,
    }
  }
  testID="filter_date_modal"
>
  <Text
    style={
      Array [
        Object {
          "color": "#181C32",
          "fontFamily": "BeVietnamPro-SemiBold",
          "fontSize": 17,
        },
        Object {},
        Object {
          "marginBottom": 24,
          "marginHorizontal": 16,
          "marginTop": 4,
        },
      ]
    }
  >
    Day posted
  </Text>
  <View
    accessibilityState={
      Object {
        "disabled": false,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="btn_option_select_date_TODAY"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 24,
          "paddingHorizontal": 16,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#212745",
              "fontFamily": "BeVietnamPro-Light",
              "fontSize": 14,
            },
            Object {
              "color": "#353E6E",
            },
            undefined,
          ]
        }
      >
        Today
      </Text>
    </View>
  </View>
  <View
    accessibilityState={
      Object {
        "disabled": false,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="btn_option_select_date_YESTERDAY"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 24,
          "paddingHorizontal": 16,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#212745",
              "fontFamily": "BeVietnamPro-Light",
              "fontSize": 14,
            },
            Object {
              "color": "#353E6E",
            },
            undefined,
          ]
        }
      >
        Yesterday
      </Text>
    </View>
  </View>
  <View
    accessibilityState={
      Object {
        "disabled": false,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="btn_option_select_date_LAST_SEVEN_DAYS"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 24,
          "paddingHorizontal": 16,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#212745",
              "fontFamily": "BeVietnamPro-Light",
              "fontSize": 14,
            },
            Object {
              "color": "#353E6E",
            },
            undefined,
          ]
        }
      >
        Last 7 days
      </Text>
    </View>
  </View>
  <View
    accessibilityState={
      Object {
        "disabled": true,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="btn_option_select_date_FROM_TO"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 24,
          "paddingHorizontal": 16,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#212745",
              "fontFamily": "BeVietnamPro-Light",
              "fontSize": 14,
            },
            Object {
              "color": "#353E6E",
            },
            undefined,
          ]
        }
      >
        Specific day
      </Text>
      <View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "borderRadius": 8,
              },
              undefined,
            ]
          }
          testID="btn_select_from_to_date"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderRadius": 8,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "paddingVertical": 4,
                },
                undefined,
                Object {
                  "backgroundColor": "#EBF4FF",
                  "height": 36,
                  "paddingHorizontal": 12,
                },
              ]
            }
            testID="button.content"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#212745",
                    "fontFamily": "BeVietnamPro-Medium",
                    "fontSize": 15,
                  },
                  Object {
                    "color": "#007AFF",
                  },
                  Array [
                    Object {
                      "textAlign": "center",
                    },
                    undefined,
                  ],
                ]
              }
              testID="button.text"
            >
              Select
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
